@startuml soulcalibur_music

' CLASSES

class Album {
    - code: UUID
    - name: String
    - type: AlbumTypeEnum
    - album_number: Number
    - game: GameNameEnum
}

class AlbumSong {
    - song_number: Number
}

class Song {
    - code: UUID
    - name: String
    - other_name: String
    - duration: String
    - variation_type: VariationTypeEnum
    - original_song: Song
}

' RELATIONSHIP

Album "1" -- "1..*" AlbumSong : Contain >
Song "1" -- "1..*" AlbumSong : Appear in >
Song "0..*" -- "1" Song : Is variation of >

' ENUMS

enum GameNameEnum {
    SE = "Soul Edge"
    SB = "Soul Blade"
    SC = "Soulcalibur"
    SCII = "Soulcalbur II"
    SCIII = "Soulcalibur III"
    SCL = "Soulcalibur Legends"
    SCIV = "Soulcalibur IV"
    SCBD = "Soulcalibur: Broken Destiny"
    SCV = "Soulcalibur V"
    SCVI = "Soulcalibur VI"
}

enum VariationTypeEnum {
    ORI = "Original"
    ARR = "Arranged"
    EXT = "Extended"
    SHORT = "Shortened"
    FRAG = "Fragment"
}

enum AlbumTypeEnum {
    OST = "Original Soundtrack"
    GR = "Gamerip"
}

@enduml
